# llm-dialog-risk-filter

./: .env.example  .gitignore  BACKEND_CONVENTIONS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
.superpowers/sdd/: task-7-report.md
config/: abbreviation_map.yaml  bypass_variants.yaml  confusable_chars.yaml  decomposition_map.yaml  default.yaml  pinyin_variants.yaml  traditional_simplified.yaml
config/rules/: advertising.yaml  houbb_sensitive_word_mapping.yaml  sensitive.yaml  sexual.yaml  violent.yaml
config/rules.bak/: sexual.yaml  violent.yaml
data/test_cases/: advertising.yaml  evasion.yaml  normal.yaml  sensitive.yaml  sexual.yaml  violent.yaml
demo/: cli_demo.py  scenarios.py
docs/: USAGE_MANUAL.md  测试用例清单.md  项目实训报告.md
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
scripts/: benchmark_rule_detector.py  convert_abbreviation_data.py  convert_decomposition_data.py  convert_traditional_simplified.py  download_model.py  evaluate.py  expand_bypass_from_synonyms.py  generate_decomposition_rules.py  import_sensitive_words.py  init_rules.py
src/: __init__.py
src/api/: models.py  (+3 more)
tests/: conftest.py  test_desensitizer.py  test_evaluation.py  test_funNLP_integration.py  test_fusion.py  test_normalizer.py  test_output_check.py  test_pipeline.py  test_rule_detector.py  test_rule_manager.py  test_rule_repository.py  test_semantic_detector.py  test_sensitive_word_import.py
(+47 files in other folders)
